--- a/css/kasper.css
+++ b/css/kasper.css
@@ -643,12 +643,14 @@ header nav .form i {
 .our-skills .skills .prog-holder .prog {
   background-color: #dedadc;
   height: 30px;
+  border-radius: 5px;
 }
 .our-skills .skills .prog-holder .prog span {
   display: block;
   background-color: var(--main-color);
   height: 100%;
   position: relative;
+  border-radius: 5px;
 }
 .our-skills .skills .prog-holder .prog span::before {
   content: attr(data-progress);
